Client ::: SCE ::: Replace MUI Collapse component to animated div due to performance issues

--- a/client/src/sass/base/_utilities.scss
+++ b/client/src/sass/base/_utilities.scss
@@ -2,3 +2,4 @@
 .u-white { color: white }
 .u-padding-top { padding-top: 4px }
 .fb { display: flex; flex: 1 1 auto; flex-direction: column; flex-wrap: nowrap; }
+.collapse { animation: slide-up 0.1s }
